--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 120px;
   background: #2d444d;
