--- a/src/styles/components/localeSwitcher.module.css
+++ b/src/styles/components/localeSwitcher.module.css
@@ -2,8 +2,9 @@
   background-color: #90bac7;
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 8px 16px;
   border-radius: 5px;
+  font-size: 20px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
