--- a/src/styles/components/login.module.css
+++ b/src/styles/components/login.module.css
@@ -30,7 +30,15 @@
     box-shadow 0.15s ease-in-out;
 }
 
-.form button {
+.btn {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  width: 100%;
+  align-items: center;
+}
+
+.btn button {
   background-color: #fff;
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
@@ -44,12 +52,15 @@
   width: 130px;
 }
 
-.btn {
-  margin: 10px auto;
-}
-
-.error {
+.errorInput {
   position: absolute;
   color: #c2060c;
   font-size: 12px;
+}
+
+.errorBtn {
+  margin-top: 2px;
+  color: #c2060c;
+  font-size: 12px;
+  text-align: center;
 }
