--- a/src/styles/pages/main.module.css
+++ b/src/styles/pages/main.module.css
@@ -1,8 +1,9 @@
 .main {
   display: flex;
   justify-content: center;
-  background: #90bac7;
-  min-height: calc(100vh - 240px);
+  /* background: #90bac7; */
+  background: linear-gradient(541deg, #0d5c71ab, #20a6c9a3);
+  min-height: calc(100vh - 200px);
   color: #ffffff;
 }
 
