--- a/src/styles/components/footer.module.css
+++ b/src/styles/components/footer.module.css
@@ -2,7 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 120px;
+  height: 100px;
   background: #457c8b;
   color: #ffffff;
+  box-shadow:
+    rgba(0, 0, 0, 0.2) 0px 2px 4px -1px,
+    rgba(0, 0, 0, 0.14) 0px 4px 5px 0px,
+    rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
 }
