--- a/src/styles/components/loader.module.css
+++ b/src/styles/components/loader.module.css
@@ -6,7 +6,7 @@
   backdrop-filter: blur(10px);
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   z-index: 9999;
   top: 0px;
   left: 0px;
