--- a/src/styles/components/login.module.css
+++ b/src/styles/components/login.module.css
@@ -56,6 +56,7 @@
   position: absolute;
   color: #c2060c;
   font-size: 12px;
+  font-weight: bold;
 }
 
 .errorBtn {
@@ -63,4 +64,5 @@
   color: #c2060c;
   font-size: 12px;
   text-align: center;
+  font-weight: bold;
 }
