--- a/src/styles/components/logout.module.css
+++ b/src/styles/components/logout.module.css
@@ -1,10 +1,6 @@
 .btnLogout {
-  padding: 8px 16px;
-  color: #ffffff;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: bold;
-  border: 1px solid #ffffff;
+  display: flex;
+  border: none;
   border-radius: 5px;
   background: none;
 }
@@ -17,4 +13,9 @@
 .userEmail {
   color: #ffffff;
   font-weight: bold;
+}
+
+.icon {
+  font-size: 30px;
+  color: #90bac7;
 }
