--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,9 @@
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   font-family: 'Exo 2', 'Lato', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
