--- a/src/styles/pages/main.module.css
+++ b/src/styles/pages/main.module.css
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: center;
   background: linear-gradient(541deg, #0d5c71ab, #20a6c9a3);
-  min-height: calc(100vh - 200px);
+  /* min-height: calc(100vh - 120px); */
   padding-top: 160px;
   flex-direction: column;
   margin: 0 auto;
   align-items: center;
+  flex: 1;
 }
 
 .heading {
@@ -74,4 +75,18 @@
 .userAuth h3 {
   margin-bottom: 20px;
   color: #2d444d;
+}
+.subheading,
+.headingGreeting {
+  font-size: 32px;
+  color: #2d444d;
+  text-align: center;
+}
+.headingGreeting {
+  font-size: 26px;
+  margin-bottom: 1rem;
+}
+.subheading {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
