--- a/src/styles/pages/main.module.css
+++ b/src/styles/pages/main.module.css
@@ -2,10 +2,8 @@
   display: flex;
   justify-content: center;
   background: linear-gradient(541deg, #0d5c71ab, #20a6c9a3);
-  /* min-height: calc(100vh - 120px); */
   padding-top: 160px;
   flex-direction: column;
-  margin: 0 auto;
   align-items: center;
   flex: 1;
 }
@@ -36,13 +34,19 @@
 
 .listDesc {
   text-align: left;
+  padding-left: 20px;
+  gap: 20px;
+}
+
+.listDesc li:not(:last-child) {
+  margin-bottom: 8px;
 }
 
 .boxDesc {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 450px;
+  max-width: 300px;
 }
 
 .boxDesc h3 {
@@ -67,26 +71,31 @@
 .userAuth ul {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 20px;
   list-style-type: none;
   margin-bottom: 40px;
 }
 
-.userAuth h3 {
-  margin-bottom: 20px;
-  color: #2d444d;
-}
-.subheading,
-.headingGreeting {
-  font-size: 32px;
+.subheading {
+  font-size: 28px;
+  font-weight: bold;
   color: #2d444d;
   text-align: center;
-}
-.headingGreeting {
-  font-size: 26px;
-  margin-bottom: 1rem;
-}
-.subheading {
-  font-size: 24px;
   margin-bottom: 20px;
+}
+
+.clientLink {
+  color: #2d444d;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  transition: border-bottom 0.3s;
+  border-bottom: 2px solid transparent;
+}
+
+.clientLink:hover {
+  border-bottom: 2px solid #2d444d;
 }
