--- a/src/styles/components/graphiql/querySection.module.css
+++ b/src/styles/components/graphiql/querySection.module.css
@@ -1,16 +1,29 @@
 .querySection {
-  display: flex;
   height: 100%;
   overflow: auto;
 }
 
 .queryCode {
-  padding-left: 5px;
   color: #000000;
   font-size: 16px;
-  line-height: 1.3;
 }
 
 /*   [contenteditable] {
     outline: 0px solid transparent;
   } */
+
+.temp {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 100%;
+}
+
+.menuLeft {
+  display: flex;
+  height: 20px;
+}
+
+.querySectionCode {
+  height: 100%;
+}
