--- a/src/styles/components/graphiql/graphiqlLayout.module.css
+++ b/src/styles/components/graphiql/graphiqlLayout.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   position: absolute;
   left: 1rem;
   right: 1rem;
@@ -60,7 +60,7 @@
 }
 
 .ResizeHandleOuter[data-resize-handle-active] {
-  --background-color: var(--color-code);
+  --background-color: #0078d4;
 }
 
 .ResizeHandleInner {
@@ -89,14 +89,6 @@
   color: #457c8b;
 }
 
-.br-3 {
-  border-radius: 0 0 5px 0;
-}
-
-.br-4 {
-  border-radius: 0 0 0 5px;
-}
-
 .titleSection {
   display: flex;
   align-items: center;
@@ -113,4 +105,43 @@
 
 .closingButton {
   position: absolute;
+}
+ */
+
+/* YourStyles.module.css */
+
+.graphiqlLayout {
+  width: 100%;
+}
+
+.wrapper {
+  height: calc(100vh - 380px);
+  display: flex;
+}
+
+.leftPanel {
+  background: #282c34;
+}
+
+.rightPanel {
+  background: #282c34;
+}
+
+.topLeftPanel {
+  background: #282c34;
+}
+
+.bottomLeftPanel {
+  background: #282c34;
+}
+
+.ResizeHandleOuter {
+  flex: 0 0 0.2em;
+  position: relative;
+  outline: none;
+  background: #646464;
+}
+
+.ResizeHandleOuter[data-resize-handle-active] {
+  background: #0078d4;
 }
