--- a/src/styles/components/graphiql/querySection.module.css
+++ b/src/styles/components/graphiql/querySection.module.css
@@ -1,27 +1,6 @@
-.querySection {
+.querySectionWrapper {
   height: 100%;
   overflow: auto;
-}
-
-.queryCode {
-  color: #000000;
-  font-size: 16px;
-}
-
-/*   [contenteditable] {
-    outline: 0px solid transparent;
-  } */
-
-.temp {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  height: 100%;
-}
-
-.menuLeft {
-  display: flex;
-  height: 20px;
 }
 
 .querySectionCode {
