feat: add block docs, button docs

--- a/src/styles/components/graphiql/docsSection.module.css
+++ b/src/styles/components/graphiql/docsSection.module.css
@@ -1,11 +1,11 @@
-.responseSectionWrapper {
+.docsSectionWrapper {
   height: 100%;
   overflow: auto;
   background: #282c34;
   position: relative;
 }
 
-.responseSectionCode {
+.docsSectionCode {
   padding-top: 40px;
   height: 100%;
 }
