--- a/src/styles/components/graphiql/querySection.module.css
+++ b/src/styles/components/graphiql/querySection.module.css
@@ -1,8 +1,16 @@
 .querySectionWrapper {
   height: 100%;
   overflow: auto;
+  position: relative;
 }
 
 .querySectionCode {
+  padding-top: 40px;
   height: 100%;
+}
+
+.title {
+  position: absolute;
+  top: 0px;
+  padding: 10px;
 }
