--- a/src/styles/components/graphiql/responseSection.module.css
+++ b/src/styles/components/graphiql/responseSection.module.css
@@ -12,7 +12,16 @@
 
 .title {
   position: absolute;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
   top: 0px;
   padding: 10px;
   color: #ffffff;
+  width: 100%;
+}
+
+.codeAndStatus {
+  font-size: 14px;
+  color: #c38d0a;
 }
