fix: query and variables sections

--- a/src/styles/components/graphiql/querySection.module.css
+++ b/src/styles/components/graphiql/querySection.module.css
@@ -11,7 +11,11 @@
 
 .title {
   position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   top: 0px;
   padding: 10px;
   color: #ffffff;
+  width: 100%;
 }
