--- a/src/styles/components/graphiql/variablesAndHeadersSection.module.css
+++ b/src/styles/components/graphiql/variablesAndHeadersSection.module.css
@@ -12,13 +12,8 @@
 .variablesAndHeadersMenu {
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 40px;
-  padding: 0 10px;
   gap: 20px;
   background: #282c34;
-  position: absolute;
-  top: 0px;
 }
 
 .menuBtn {
@@ -37,4 +32,14 @@
   color: #ffffff;
   opacity: 1;
   border-bottom: 2px solid #0078d4;
+}
+
+.temp {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  width: 100%;
+  padding: 10px;
 }
