--- a/src/styles/components/graphiql/querySection.module.css
+++ b/src/styles/components/graphiql/querySection.module.css
@@ -1,12 +1,7 @@
-.querySectionWrapper {
+/* .querySectionWrapper {
   height: 100%;
   overflow: auto;
   position: relative;
-}
-
-.querySectionCode {
-  padding-top: 40px;
-  height: 100%;
 }
 
 .title {
@@ -18,4 +13,9 @@
   padding: 10px;
   color: #ffffff;
   width: 100%;
+} */
+
+.querySectionCode {
+  padding-top: 40px;
+  height: 100%;
 }
