--- a/src/styles/components/graphiql/responseSection.module.css
+++ b/src/styles/components/graphiql/responseSection.module.css
@@ -1,13 +1,8 @@
-.responseSectionWrapper {
+/* .responseSectionWrapper {
   height: 100%;
   overflow: auto;
   background: #282c34;
   position: relative;
-}
-
-.responseSectionCode {
-  padding-top: 40px;
-  height: 100%;
 }
 
 .title {
@@ -24,4 +19,9 @@
 .codeAndStatus {
   font-size: 14px;
   color: #c38d0a;
+} */
+
+.responseSectionCode {
+  padding-top: 40px;
+  height: 100%;
 }
