--- a/src/styles/components/graphiql/variablesAndHeadersSection.module.css
+++ b/src/styles/components/graphiql/variablesAndHeadersSection.module.css
@@ -1,4 +1,4 @@
-.variablesAndHeadersWrapper {
+/* .variablesAndHeadersWrapper {
   height: 100%;
   overflow: auto;
   position: relative;
@@ -42,4 +42,10 @@
   height: 40px;
   width: 100%;
   padding: 10px;
+}
+ */
+
+.variablesAndHeadersCode {
+  padding-top: 40px;
+  height: 100%;
 }
