refac: styles and add translation

--- a/src/styles/components/graphiql/graphiqlLayout.module.css
+++ b/src/styles/components/graphiql/graphiqlLayout.module.css
@@ -120,19 +120,19 @@
 }
 
 .leftPanel {
-  background: #282c34;
+  background: #1e1e1e;
 }
 
 .rightPanel {
-  background: #282c34;
+  background: #1e1e1e;
 }
 
 .topLeftPanel {
-  background: #282c34;
+  background: #1e1e1e;
 }
 
 .bottomLeftPanel {
-  background: #282c34;
+  background: #1e1e1e;
 }
 
 .ResizeHandleOuter {
