--- a/src/styles/components/graphiql/graphiqlLayout.module.css
+++ b/src/styles/components/graphiql/graphiqlLayout.module.css
@@ -112,6 +112,7 @@
 
 .graphiqlLayout {
   width: 100%;
+  padding: 0 40px 40px 40px;
 }
 
 .wrapper {
@@ -121,10 +122,12 @@
 
 .leftPanel {
   background: #1e1e1e;
+  border-bottom-left-radius: 7px;
 }
 
 .rightPanel {
   background: #1e1e1e;
+  border-bottom-right-radius: 7px;
 }
 
 .topLeftPanel {
