refac: styles graphiql clinet

--- a/src/styles/components/graphiql/docsSection.module.css
+++ b/src/styles/components/graphiql/docsSection.module.css
@@ -1,7 +1,7 @@
 .docsSectionWrapper {
   height: 100%;
   overflow: auto;
-  background: #282c34;
+  background: #1e1e1e;
   position: relative;
 }
 
