--- a/src/styles/pages/main.module.css
+++ b/src/styles/pages/main.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   background: linear-gradient(541deg, #0d5c71ab, #20a6c9a3);
-  padding: 100px 40px 40px 40px;
+  padding: 120px 40px 40px 40px;
   flex-direction: column;
   align-items: center;
   flex: 1;
@@ -74,12 +74,15 @@
 .clientLink {
   color: #2d444d;
   text-decoration: none;
-  cursor: pointer;
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
   transition: border-bottom 0.3s;
   border-bottom: 2px solid transparent;
+}
+
+.clientLink.active {
+  cursor: pointer;
 }
 
 .clientLink:hover {
@@ -114,4 +117,9 @@
 .userAuthItem:hover {
   background-color: #ffffff;
   color: #2d444d;
+}
+
+.userAuthBtn {
+  display: flex;
+  justify-content: center;
 }
